persistent-app/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistent-app
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: persistent-app
  template:
    metadata:
      labels:
        deployment: persistent-app
    spec:
      containers:
      - name: persistent-app
        image: quay.io/apoczeka/persistent-app:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: persistent-app
