persistent-app/resources/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: persistent-app
spec:
  selector:
    deployment: persistent-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
